--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon ./src/index.js"
+    "nodemon": "nodemon ./src/index.js",
+    "debug": "node --inspect ./src/index.js"
   },
   "keywords": [],
   "author": "",
